--- a/src/main/webapp/page/css/create-hotel.css
+++ b/src/main/webapp/page/css/create-hotel.css
@@ -68,3 +68,18 @@ input[type="submit"]:hover {
     margin: 0;
     padding: 0;
 }
+
+a {
+    color: #0066ff; /* цвет текста */
+    text-decoration: none; /* убирает подчеркивание */
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    padding: 10px;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+a:hover {
+    text-decoration: underline; /* добавляет подчеркивание при наведении */
+}
