--- a/src/main/webapp/page/css/hotel-details.css
+++ b/src/main/webapp/page/css/hotel-details.css
@@ -188,3 +188,41 @@ td:last-child[data-value="Да"]::before {
     background-color: #4CAF50;
     color: #fff;
 }
+
+.back-button-container {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 10px;
+}
+
+.back-button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #fff;
+    background-color: #333;
+    border-radius: 5px;
+}
+
+.back-button:hover {
+    background-color: #555;
+}
+
+.book-button {
+    display: inline-block;
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+.book-button:hover {
+    background-color: #3e8e41;
+}
