--- a/src/main/webapp/page/css/my-hotels.css
+++ b/src/main/webapp/page/css/my-hotels.css
@@ -47,3 +47,21 @@ button {
 button:hover {
     background-color: #3e8e41;
 }
+
+#home-button {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    padding: 10px;
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff;
+    background-color: #007bff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#home-button:hover {
+    background-color: #0062cc;
+}
