--- a/src/main/webapp/page/css/profile.css
+++ b/src/main/webapp/page/css/profile.css
@@ -197,3 +197,23 @@ label {
 .profile-info p:last-child {
     border-bottom: none;
 }
+
+#booking-history-button {
+    background-color: #4CAF50; /* Зеленый */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+#booking-history-button:hover {
+    background-color: #3e8e41;
+}
